# rskafka

./: Cargo.toml  rskafka-fetch-1.pcap  rskafka-join-group.pcap
examples/: consumer.rs
rskafka-proto/: Cargo.toml
rskafka-proto-derive/: Cargo.toml
rskafka-proto-derive/src/: lib.rs
rskafka-proto/src/: error.rs  lib.rs  request.rs  response.rs  wire_format.rs
rskafka-proto/src/apis/: api_versions.rs  create_topics.rs  fetch.rs  find_coordinator.rs  join_group.rs  metadata.rs  mod.rs  offset_fetch.rs  sync_group.rs
rskafka-proto/src/data/: api_key.rs  error.rs  header.rs  mod.rs  record.rs
rskafka-proto/src/data/primitive/: array.rs  bytes.rs  int.rs  mod.rs  string.rs
rskafka-wire-format/: Cargo.toml
rskafka-wire-format-derive/: Cargo.toml
rskafka-wire-format-derive/src/: lib.rs
rskafka-wire-format/src/: array.rs  boolean.rs  bytes.rs  error.rs  int.rs  lib.rs  parse_helpers.rs  string.rs  tuple.rs  uuid.rs
src/: batch.rs  error.rs  lib.rs  message.rs
src/client/: async_cluster_client.rs  async_connection.rs  config.rs  connection.rs  connection_test.rs  error.rs  mod.rs  simple.rs
src/consumer/: assignment_stream.rs  assingment_stream_idea.rs  fetch_data.rs  fetch_strategy.rs  mod.rs
src/proto/: mod.rs
src/proto/apis/: api_versions.rs  create_topics.rs  find_coordinator.rs  join_group.rs  metadata.rs  mod.rs  topic_metadata.rs
src/proto/data/: api_key.rs  error.rs  header.rs  mod.rs  primitive.rs
src/proto/data/primitive/: bytes.rs  int.rs  mod.rs  string.rs
src/proto/decode/: mod.rs  primitive.rs
tests/: connection.rs  simple_client.rs
