[package]
name = "rskafka"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.15"
log = "0.4.8"
nom = "5.1.1"
uuid = "0.8.1"
byteorder = "1.3.4"
either = "1.5.3"

[dev-dependencies]
env_logger = "0.7.1"