[package]
name = "rskafka"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2018"

[workspace]
members = [
    "rskafka-proto",
]

[dependencies]
rskafka-proto = { path = "rskafka-proto" }
thiserror = "1.0.16"
log = "0.4.8"
nom = "5.1.1"
uuid = "0.8.1"
byteorder = "1.3.4"
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.4"

[dev-dependencies]
env_logger = "0.7.1"
anyhow = "1.0.28"