[package]
name = "rskafka"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2018"

[workspace]
members = [
    "rskafka-wire-format",
    "rskafka-wire-format-derive",
    "rskafka-proto",
]

[dependencies]
rskafka-proto = { path = "rskafka-proto" }
rskafka-wire-format = { path = "rskafka-wire-format" }
rskafka-wire-format-derive = { path = "rskafka-wire-format-derive" }
thiserror = "1.0.16"
log = "0.4.8"
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.4"

[dev-dependencies]
env_logger = "0.7.1"
anyhow = "1.0.28"