[package]
name = "rskafka-proto"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2018"

[dependencies]
rskafka-wire-format-derive = { path = "../rskafka-wire-format-derive" }
rskafka-wire-format = { path = "../rskafka-wire-format" }
log = "0.4.8"
nom = "5.1.1"

[dev-dependencies]
env_logger = "0.7.1"